name:                idly
version:             0.1
homepage:            https://www.megam.io
bug-reports:         http://support.megam.io
license:             Apache-2.0
author:              Megam Systems.
maintainer:          The Megam Team <info@megam.io>
copyright:           Copyright (c) 2013-present, Megam Systems.
category:            System
build-type:          Simple
stability:           alpha
cabal-version:       >= 1.22.2
synopsis:            A continious integration wrapper for travis ci, circle ci

description:
  Idly is a continious integration wrapper on top of travis-ci or circle ci. We primarily use this to receive
  the build notification from travis, and kick off automated build on top our https://github.com/megamsys/packager.git
  .
  See <https://github.com/megamsys/idly.git>

extra-source-files:
  README.md


library
  exposed-modules:
    AutoConf
    Idly.BasicTypes
    Idly.Common
    Idly.ConstantUtils
    Idly.Constants
    Idly.Daemon
    Idly.Errors
    Idly.Hash
    Idly.JSON
    Idly.Lens
    Idly.Logging
    Idly.Logging.Lifted
    Idly.Logging.WriterLog
    Idly.Metad.Server
    Idly.Metad.Types
    Idly.Metad.WebServer
    Idly.Objects
    Idly.Objects.BitArray
    Idly.Objects.Disk
    Idly.Objects.Instance
    Idly.Objects.Lens
    Idly.Objects.Nic
    Idly.Path
    Idly.PartialParams
    Idly.Runtime
    Idly.Ssconf
    Idly.Types
    Idly.Utils
    Idly.Utils.AsyncWorker
    Idly.Utils.Atomic
    Idly.Utils.IORef
    Idly.Utils.MVarLock
    Idly.Utils.Monad
    Idly.Utils.MultiMap
    Idly.Utils.Random
    Idly.Utils.Statistics
    Idly.Utils.UniStd
    Idly.Utils.Validate
    Idly.THH
    Idly.THH.Field
    Idly.THH.Types
    Idly.Version
    Test.AutoConf
    Test.Idly.Attoparsec
    Test.Idly.BasicTypes
    Test.Idly.Common
    Test.Idly.Constants
    Test.Idly.Daemon
    Test.Idly.Errors
    Test.Idly.JSON
    Test.Idly.Objects
    Test.Idly.Objects.BitArray
    Test.Idly.TestCommon
    Test.Idly.TestHelper
    Test.Idly.TestImports
    Test.Idly.Types
    Test.Idly.Utils
    Test.Idly.Utils.MultiMap
    Test.Idly.Utils.Statistics
  -- other-modules:
  other-extensions:
      TemplateHaskell
  build-depends:
      base                          >= 4.8.0.0
    , array                         >= 0.5.1.0
    , bytestring                    >= 0.10.6.0
    , containers                    >= 0.5.6.2
    , deepseq                       >= 1.4.1.1
    , directory                     >= 1.2.2.0
    , filepath                      >= 1.4.0.0
    , mtl                           >= 2.2.1
    , old-time                      >= 1.1.0.3
    , pretty                        >= 1.1.2.0
    , process                       >= 1.2.3.0
    , random                        >= 1.1
    , template-haskell              >= 2.9.0.0
    , text                          >= 1.2.1
    , transformers                  >= 0.4.2.0
    , unix                          >= 2.7.1.0

    , attoparsec                    >= 0.13.0.0
    , base64-bytestring             >= 1.0.0.1
    , case-insensitive              >= 1.2.0.4
    , Crypto                        >= 4.2.5.1
    , curl                          >= 1.3.8
    , hinotify                      >= 0.3.7
    , hslogger                      >= 1.2.9
    , json                          >= 0.9.1
    , lens                          >= 4.11
    , lifted-base                   >= 0.2.3.6
    , monad-control                 >= 1.0.0.4
    , MonadCatchIO-transformers     >= 0.3.1.3
    , network                       >= 2.6.1.0
    , parallel                      >= 3.2.0.6
    , regex-pcre                    >= 0.94.4
    , temporary                     >= 1.2.0.3
    , transformers-base             >= 0.4.4
    , utf8-string                   >= 1
    , zlib                          >= 0.6.1.1

    , HUnit                         >= 1.2.5.2
    , QuickCheck                    >= 2.8.1
    , test-framework                >= 0.8.1.1
    , test-framework-hunit          >= 0.3.0.1
    , test-framework-quickcheck2    >= 0.3.0.3
    , PSQueue                       >= 1.1
    , snap-core                     >= 0.9.7.0
    , snap-server                   >= 0.9.5.1

    -- Executables:
    -- , happy
    -- , hscolour
    -- , shelltestrunner


  hs-source-dirs:
    src, test
  default-language:
    Haskell2010
  ghc-options:
    -Wall


executable idlyd
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
      base
    , array                         >= 0.5.1.0
    , bytestring                    >= 0.10.6.0
    , containers                    >= 0.5.6.2
    , deepseq                       >= 1.4.1.1
    , directory                     >= 1.2.2.0
    , filepath                      >= 1.4.0.0
    , mtl                           >= 2.2.1
    , old-time                      >= 1.1.0.3
    , pretty                        >= 1.1.2.0
    , process                       >= 1.2.3.0
    , random                        >= 1.1
    , template-haskell              >= 2.9.0.0
    , text                          >= 1.2.1
    , transformers                  >= 0.4.2.0
    , unix                          >= 2.7.1.0

    , attoparsec                    >= 0.13.0.0
    , base64-bytestring             >= 1.0.0.1
    , case-insensitive              >= 1.2.0.4
    , Crypto                        >= 4.2.5.1
    , curl                          >= 1.3.8
    , hinotify                      >= 0.3.7
    , hslogger                      >= 1.2.9
    , json                          >= 0.9.1
    , lens                          >= 4.11
    , lifted-base                   >= 0.2.3.6
    , monad-control                 >= 1.0.0.4
    , MonadCatchIO-transformers     >= 0.3.1.3
    , network                       >= 2.6.1.0
    , parallel                      >= 3.2.0.6
    , regex-pcre                    >= 0.94.4
    , temporary                     >= 1.2.0.3
    , transformers-base             >= 0.4.4
    , utf8-string                   >= 1
    , zlib                          >= 0.6.1.1

    , HUnit                         >= 1.2.5.2
    , QuickCheck                    >= 2.8.1
    , test-framework                >= 0.8.1.1
    , test-framework-hunit          >= 0.3.0.1
    , test-framework-quickcheck2    >= 0.3.0.3
    , PSQueue                       >= 1.1
    , snap-core                     >= 0.9.7.0
    , snap-server                   >= 0.9.5.1
    , idly
